--- a/style.css
+++ b/style.css
@@ -1,80 +1,53 @@
-element.style {
-  padding-left: 18px!important;
-  padding-right: 18px!important;
-}
-.a-bar  {
-  white-space: normal;
-}
-.a-bar {
-  padding: 8px 16px;
-  float: left;
-  width: auto;
-  border: none;
-  display: block;
-  outline: 0;
-}
-.topnav a {
-  padding: 10px 15px 9px 15px !important;
-}
-.w3-btn, .w3-button {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.w3-btn, .w3-button {
-  border: none;
-  display: inline-block;
-  padding: 8px 16px;
-  vertical-align: middle;
-  overflow: hidden;
-  text-decoration: none;
-  color: inherit;
-  background-color: inherit;
-  text-align: center;
-  cursor: pointer;
-  white-space: nowrap;
-}
-a {
-  color: inherit;
-}
-a {
-  background-color: transparent;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-user agent stylesheet
-a:-webkit-any-link {
-  color: -webkit-link;
-  cursor: pointer;
-  text-decoration: underline;
-}
 .topnav {
-  position: relative;
-  z-index: 2;
+  background-color: #333;
+  overflow: hidden;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
   font-size: 17px;
-  background-color: #282A35;
-  color: #f1f1f1;
-  width: 100%;
-  padding: 0;
-  letter-spacing: 1px;
-  font-family: 'Source Sans Pro', sans-serif;
 }
-html, body {
-  font-family: Verdana,sans-serif;
-  font-size: 15px;
-  line-height: 1.5;
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
-html {
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+
+.topnav .icon {
+  display: none;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
